--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
       "lib": ["es2015"],
       "strict": true,
       "declaration": true,
-      "outDir": "dist",
+      "outDir": "out",
       "sourceMap": true
     },
     "include": ["src/**/*"],
