--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,9 @@
     "compilerOptions": {
       "target": "es6",
       "module": "commonjs",
+      "noImplicitAny": true,
+      "removeComments": true,
+      "preserveConstEnums": true,
       "lib": ["es2015"],
       "strict": true,
       "declaration": true,
