--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-triples",
+  "name": "@canyala/rdf-graph",
   "version": "0.0.1",
   "description": "An implementation of a local triple store.",
   "main": "index.js",
@@ -11,7 +11,7 @@
     "start": "node out/index.js"
   },
   "author": "Martin Fredriksson <martin@canyala.se> (www.canyala.se)",
-  "license": "ISC",
+  "license": "MIT",
   "devDependencies": {
     "@types/jest": "^26.0.13",
     "@types/node": "^14.10.2",
@@ -22,5 +22,22 @@
     "source-map-support": "^0.5.19",
     "ts-jest": "^26.3.0",
     "typescript": "^4.0.2"
-  }
+  },
+  "dependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/canyala/rdf-graph.git"
+  },
+  "keywords": [
+    "rdf",
+    "graph",
+    "triple",
+    "turtle",
+    "sparql",
+    "n3"
+  ],
+  "bugs": {
+    "url": "https://github.com/canyala/rdf-graph/issues"
+  },
+  "homepage": "https://github.com/canyala/rdf-graph#readme"
 }
