--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
       "lib": ["es2015"],
       "strict": true,
       "declaration": true,
-      "outDir": "out",
+      "outDir": "lib",
       "sourceMap": true
     },
     "include": ["src/**/*"],
